style.css
*{
    margin:0;
    padding:0;
    box-sizing:border-box;
    font-family:Arial, Helvetica, sans-serif;
}


body{
    background:#050505;
    color:white;
    overflow-x:hidden;
}


/* ================= LOADER ================= */


.loader{

position:fixed;
transition:opacity .5s ease;
top:0;
left:0;

width:100%;
height:100vh;

background:#000;

display:flex;

align-items:center;

justify-content:center;

flex-direction:column;

z-index:99999;


}


.samsung-logo{

font-size:clamp(35px,8vw,60px);

font-weight:700;

letter-spacing:8px;
 text-decoration:none;
color:white;

}



.loading{

width:50px;

height:50px;

margin-top:25px;

border-radius:50%;

border:5px solid #333;

border-top:5px solid white;

animation:rotate 1s linear infinite;


}



@keyframes rotate{


from{

transform:rotate(0deg);

}


to{

transform:rotate(360deg);

}


}


@keyframes logoFade{

    from{
        opacity:.4;
    }

    to{
        opacity:1;
    }

}




/* ================= HEADER ================= */


header{

    width:100%;

    height:80px;

    background:#000;

    display:flex;

    align-items:center;

    justify-content:space-between;

    padding:0 8%;

    position:sticky;

    top:0;

    z-index:100;


}



.logo{

    font-size:24px;
    color:white;
    text-decoration:none;
    font-weight:bold;
 
}



nav a{

    color:white;

    text-decoration:none;

    margin-left:25px;

    transition:.3s;

}



nav a:hover{

    color:#4d6cff;

}



.menu-btn{

    display:none;

    font-size:30px;

    cursor:pointer;

}




/* ================= HERO ================= */


.hero{


height:90vh;


background:

linear-gradient(
rgba(0,0,0,.5),
rgba(0,0,0,.9)
),

url("images/showroom.jpg");


background-size:cover;

background-position:center;


display:flex;

align-items:center;

padding:8%;


}



.hero h1{


font-size:clamp(35px,6vw,65px);

max-width:700px;


animation:fadeUp 1s;


}



.hero p{


font-size:20px;

margin-top:20px;


}




button{


background:#1428a0;

color:white;

border:none;

padding:14px 30px;

border-radius:30px;

cursor:pointer;

margin-top:25px;

transition:.3s;


}



button:hover{

transform:scale(1.08);

}




/* ================= PRODUCTS ================= */



.featured{

padding:60px 8%;

}



.featured h2{

font-size:35px;

}



.products{


display:grid;

grid-template-columns:

repeat(auto-fit,minmax(250px,1fr));


gap:30px;

margin-top:40px;


}



.card{


background:#111;

padding:20px;

border-radius:20px;

transition:.4s;


}



.card:hover{


transform:translateY(-15px);

box-shadow:0 0 30px #1428a0;


}



.card img{


width:100%;

height:220px;

object-fit:cover;

border-radius:15px;


}


#search{


margin-top:30px;


width:80%;


max-width:500px;


padding:15px 20px;


border-radius:30px;


border:none;


font-size:18px;


outline:none;


}


.about-hero{


height:60vh;


display:flex;

justify-content:center;

align-items:center;

flex-direction:column;


background:#000;


text-align:center;


}


.about-hero h1{


font-size:clamp(35px,6vw,60px);


}



.about-content{


padding:70px 10%;


text-align:center;


}



.about-content p{


font-size:20px;

line-height:1.8;


}



.features{


display:flex;

justify-content:center;

gap:20px;

margin-top:40px;


}



.features div{


background:#111;


padding:25px;


border-radius:20px;


}


@media(max-width:700px){


.features{

flex-direction:column;

}


}

/* CONTACT PAGE */


.contact-hero{


height:60vh;


display:flex;

flex-direction:column;

justify-content:center;

align-items:center;


text-align:center;


background:

linear-gradient(
rgba(0,0,0,.5),
rgba(0,0,0,.9)
),

url("images/showroom.jpg");


background-size:cover;


}



.contact-hero h1{


font-size:clamp(35px,6vw,60px);


}




.contact-section{


padding:70px 8%;


display:grid;


grid-template-columns:

repeat(auto-fit,minmax(280px,1fr));


gap:30px;


}




.contact-card{


background:#111;


padding:35px;


border-radius:25px;


transition:.4s;


}



.contact-card:hover{


transform:translateY(-10px);


box-shadow:0 0 30px #1428a0;


}




.contact-card p{


margin-top:15px;


line-height:1.6;


}




.services{


padding:70px 8%;


text-align:center;


}



.service-grid{


display:grid;


grid-template-columns:

repeat(auto-fit,minmax(250px,1fr));


gap:25px;


margin-top:40px;


}



.service-grid div{


background:#111;


padding:30px;


border-radius:20px;


}




@media(max-width:700px){


.contact-hero{


height:50vh;


}


}

/* ================= MODAL ================= */


.modal{


display:none;

position:fixed;

inset:0;


background:rgba(0,0,0,.8);


justify-content:center;

align-items:center;


padding:20px;


z-index:200;


}



.modal-box{


background:#111;

width:100%;

max-width:400px;


padding:35px;

border-radius:20px;


}



.modal-box span{


float:right;

font-size:30px;

cursor:pointer;


}




/* ================= REVIEWS ================= */



.reviews{


padding:50px 8%;


}



.review{


background:#111;

padding:25px;

border-radius:20px;

margin:20px 0;


animation:fadeUp 1s;


}



.stars{


color:#ffd700;

font-size:25px;

letter-spacing:5px;

animation:star 1.5s infinite alternate;


}



@keyframes star{


from{

transform:scale(1);

}

to{

transform:scale(1.2);

}


}




/* ================= FOOTER ================= */



footer{


background:#000;

text-align:center;

padding:50px 20px;


}



footer a{


color:white;

margin:10px;

text-decoration:none;


}



.copy{


margin-top:30px;

color:#777;


}



/* ================= ANIMATION ================= */



@keyframes fadeUp{


from{

opacity:0;

transform:translateY(40px);


}


to{


opacity:1;

transform:translateY(0);


}


}




/* ================= MOBILE ================= */



@media(max-width:768px){



header{

padding:0 20px;

}



.menu-btn{

display:block;

}



nav{


position:absolute;

top:80px;

left:0;


width:100%;


background:#000;


display:none;


flex-direction:column;


text-align:center;


padding:25px;


}



nav a{


margin:15px 0;


}



nav.active{


display:flex;


}



.hero{


height:80vh;
padding:30px;


}



.hero p{


font-size:16px;


}

